# rustatex

./: Cargo.toml  README.md  grammar.pest  simple.rt
src/: cli.rs  document.rs  errors.rs  lib.rs  main.rs  parser.rs  renderer.rs  styles.rs
