[package]
name = "rustatex"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.1", features = ["derive"] }
printpdf = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.7"
lazy_static = "1.4"
pest = "2.7.13"
pest_derive = "2.7.13"
log = "0.4"
env_logger = "0.10"
